--- a/fluttermedia/web/index.html
+++ b/fluttermedia/web/index.html
@@ -54,5 +54,29 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.4/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.4/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDA9h08mJIW9FhmlIqbVv75X9bepAN86cg",
+      authDomain: "flutter-mediaa.firebaseapp.com",
+      databaseURL: "https://flutter-mediaa-default-rtdb.firebaseio.com",
+      projectId: "flutter-mediaa",
+      storageBucket: "flutter-mediaa.appspot.com",
+      messagingSenderId: "1088838074356",
+      appId: "1:1088838074356:web:aabdb7569ac7a3421303a1",
+      measurementId: "G-FNYV8LL4NJ"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
